# kanban

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  flake.nix  justfile
frontend/: justfile  package.json
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: ErrorBoundary.tsx  KanbanBoard.tsx  TaskDetails.tsx
frontend/src/hooks/: useErrorHandler.tsx
migrations/2025-03-02-123235_create_tasks/: up.sql
migrations/2025-07-27-224451_add_soft_deletes_to_tasks/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs  task.rs
